--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ production-config.php
 local-config.php
 /public/wp-content/plugins
 /public/wp-content/uploads
+.sass-cache
 
 // ignore content of themes dir
 !/public/wp-content/themes
