--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
         "php": ">=5.4",
         "composer/installers": "1.*",
         "johnpbloch/wordpress": "4.6.*",
-        "wpackagist-theme/skt-charity": "1.5"
+        "wpackagist-theme/skt-charity": "1.5",
+        "wpackagist-plugin/contact-form-7": "4.5",
+        "wpackagist-plugin/paypal-donation-button": "1.2.3"
     },
     "extra": {
         "wordpress-install-dir": "public/wp",
